--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3"
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "typescript": "^3.9.7"
   },
   "scripts": {
     "start": "react-scripts start",
