--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-skills": "^1.27.0",
     "styled-components": "^5.1.1",
     "typescript": "^3.9.7"
   },
